fixed logo height on smaller sizes, fixes #4

--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -66,7 +66,7 @@ nav.navbar-default {
 
 	.navbar-brand {
 		background-color: #fff;
-		padding: 13px 15px;
+		padding: 11px 15px;
 		width: 75%;
 
 		@include hocus {
@@ -74,8 +74,7 @@ nav.navbar-default {
 		}
 
 		img {
-			height: auto;
-			max-height: 60px;
+			height: 100%;
 
 			@media screen and (min-width: $screen-sm){
 				max-width: 200px;
